responsive changes, animations, content"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         <h2 class="home-header-subtitle">Baptist Church</h2>
         <p class="home-header-tag">Hand in hand, growing in Christ.</p>
       </div>
-      <a href="#{{ page.section1_header }}" class="button buttonAlt 3">Learn More</a>
+      <a href="#{{ page.section1_header }}" class="button button-alt 3">Learn More</a>
     </div>
   </div>
 </header>
