--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<div class="nav-bar animated fadeIn slow4">
+<div class="nav-bar">
   <a href="/" class=""><img class="logo" src="/images/logoBlack.png" /><h1 class="logo-text">Good Hope</h1><h2 class="logo-sub-text">Baptist Church</h2></a>
   <div class="nav-items">
     <ul>
