--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,14 +37,14 @@ h2.content-block-title{
   @include banner;
   min-height: 40vh;
   max-height: 40%;
-
+  padding-top: 2em;
 }
 .content-image p{
   color: $color-white;
   margin: 0;
 }
 h3.content-image-text{
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-family: $base-font-family;
   color: $color-white;
 }
