--- a/_sass/layout/page.scss
+++ b/_sass/layout/page.scss
@@ -1,7 +1,8 @@
 .page-header{
   @include banner;
   min-height: 60vh;
-  max-height: 60%;
+  max-height: 60vh;
+  height: 60vh;
 }
 @include laptop {
   .page-header{
@@ -11,4 +12,5 @@
 
 .page-title{
   color: $color-white;
+  font-size: 4rem;
 }
