--- a/_sass/utils/helpers.scss
+++ b/_sass/utils/helpers.scss
@@ -6,20 +6,21 @@
   color: $color-white;
 }
 .pull-right {
-  float: right; }
+  float: right;
+}
 .pull-left {
-  float: left; }
+  float: left;
+}
 .text-center{
-  text-align: center;}
+  text-align: center;
+}
 .vertical{
   display: table-cell;
   vertical-align: middle;
 }
-
 .hidden {
   opacity:0
 }
-
 .visible {
   opacity:1
 }
