--- a/_sass/utils/mixins.scss
+++ b/_sass/utils/mixins.scss
@@ -2,6 +2,7 @@
   display: table;
   height: 100%;
   width: 100%;
+  padding-top: 80px;
   position: relative;
   background-repeat: no-repeat;
   background-position: center center;
