--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,7 @@ $spacing-unit:     30px;
 $text-color:       rgba(0, 0, 0, 0.7);
 $background-color: rgba(250, 250, 250, 1);
 $brand-color:      rgba(107, 147, 98, 1);
+$brand-color-dark:  darken($brand-color, 6%);
 
 $color-white:       rgba(250, 250, 250, 1);
 
