New Content, Added grid elements.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header id="home" class="home-header" style="background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/corn.jpg);">
+<header id="home" class="home-header" style="background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url({{ page.home_banner }});">
   <div class="home-header-content vertical">
     <div class="home-header-inner 5">
       <div class="home-header-header 2">
