--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -155,6 +155,9 @@ img{
   width: 100%;
   height: auto;
 }
+.img-circle {
+    border-radius: 50%;
+}
 blockquote{
   font-style: italic;
   margin-left: 0px;
