--- a/css/main.scss
+++ b/css/main.scss
@@ -47,7 +47,7 @@ $desktop-width:          1600px;
         "layout/navigation",
         "layout/mobile-menu",
         "layout/page",
-        "layout/services",
+        "layout/grid",
         "layout/projects",
         "layout/forms",
         "layout/contact-form";
