--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="text-center">
+  <div class="container text-center">
     <p>Good Hope Baptist Church, <a href="https://www.google.com/maps/place/Good+Hope+Baptist+Church/@32.574655,-86.014291">1766 South Fleahop Rd, Eclectic, AL 36024&lrm; </a><a href="tel:+13345413837">(334) 541-3837</a></p>
   </div>
 </footer>
