--- a/_sass/components/_home-header.scss
+++ b/_sass/components/_home-header.scss
@@ -20,7 +20,7 @@
 
 .home-header-title{
   color: $color-white;
-  font-size: 2.2rem;
+  font-size: 1.8rem;
   font-family: $base-font-family;
   letter-spacing: .2em;
   margin-bottom: 0em;
@@ -29,7 +29,7 @@
 }
 .home-header-subtitle{
   color: $color-white;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-family: $base-font-family;
   letter-spacing: .4em;
   margin: 0 auto;
@@ -37,7 +37,7 @@
 }
 .home-header-tag{
   color: $color-white;
-  font-size: .8rem;
+  font-size: .7rem;
   font-family: $base-font-family;
   font-style: italic;
   letter-spacing: .2em;
@@ -45,6 +45,7 @@
   border-top: .20rem solid $color-white;
   border-bottom: .20rem  solid $color-white;
   margin: 0 auto;
+  max-width: 22em;
 }
 
 
@@ -62,14 +63,14 @@
 }
 @include phone {
   .home-header-title{
-    font-size: 2.2rem;
+    font-size: 3.1rem;
   }
   .home-header-subtitle{
-    font-size: 1.2rem;
+    font-size: 1.7rem;
   }
   .home-header-tag{
-    font-size: 1rem;
-    max-width: 20rem;
+    font-size: 1.2rem;
+    max-width: 25rem;
   }
 }
 @include tablet {
