--- a/_sass/layout/navigation.scss
+++ b/_sass/layout/navigation.scss
@@ -8,6 +8,7 @@
   z-index: 9999;
   background-color: $background-color;
   border-top: .2rem $brand-color solid;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.1), 0 3px 6px rgba(0,0,0,0.12);
 
 }
 .logo {
