--- a/_sass/layout/grid.scss
+++ b/_sass/layout/grid.scss
@@ -52,7 +52,7 @@
   @include banner;
   min-height: 300px;
   max-height: 300px;
-  height: 40em;
+  height: 300px;
   width: 100%;
   float: right;
 }
@@ -62,6 +62,7 @@
 @include laptop {
   .column-image{
     width: 50%;
+    height: 600px;
     min-height: 600px;
     max-height: 600px;
   }
