--- a/_sass/layout/grid.scss
+++ b/_sass/layout/grid.scss
@@ -68,6 +68,7 @@
   }
   .column-container{
     padding: 0 15%;
+    max-width: 720px;
     margin: 0 auto;
     margin-top: 3em;
   }
@@ -79,10 +80,16 @@ p.column-title{
   margin-top: 0;
   margin-bottom: 2em;
   font-family: $alt-font-family;
+  color: $grey-color;
 }
 p.column-text{
   text-align: left;
   margin-top: 0;
   margin-bottom: 2em;
-  font-size: 1rem;
+  font-size: 1.1rem;
+}
+
+#staff .half-column:first-of-type{
+  border-right: none;
+  margin-right: 0;
 }
