--- a/_sass/layout/page.scss
+++ b/_sass/layout/page.scss
@@ -1,8 +1,8 @@
 .page-header{
   @include banner;
-  min-height: 60vh;
-  max-height: 60vh;
-  height: 60vh;
+  min-height: 70vh;
+  max-height: 70vh;
+  height: 70vh;
   padding-top: 80px;
 }
 @include laptop {
@@ -14,4 +14,7 @@
 .page-title{
   color: $color-white;
   font-size: 4rem;
+}
+h5.sub-title{
+  color: $grey-color;
 }
