--- a/_sass/layout/navigation.scss
+++ b/_sass/layout/navigation.scss
@@ -7,7 +7,7 @@
   position: fixed;
   z-index: 9999;
   background-color: $background-color;
-  border-top: .2rem $brand-color solid;
+  border-top: 3px $brand-color solid;
   box-shadow: 0 3px 6px rgba(0,0,0,0.1), 0 3px 6px rgba(0,0,0,0.12);
 
 }
@@ -15,13 +15,13 @@
   float: left;
   width: 45px;
   padding-top: 10px;
-  padding-left: 20px;
+  padding-left: 22px;
   display: block;
 }
 .logo-text{
   position: absolute;
   padding-top: 4px;
-  padding-left: 80px;
+  padding-left: 82px;
   font-size: 21.6px;
   font-family: $base-font-family;
   letter-spacing: .2em;
@@ -31,7 +31,7 @@
 }
 .logo-sub-text{
   position: absolute;
-  padding-left: 80px;
+  padding-left: 82px;
   padding-top: 39px;
   font-size: 12px;
   font-family: $base-font-family;
@@ -41,8 +41,8 @@
 }
 .nav-items{
   position: absolute;
-  top: 1.51em;
-  right: 1.5em;
+  top: 24px;
+  right: 12px;
   display: none;
 }
 
