--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -68,7 +68,7 @@ a{
    Headers
    ========================================================================== */
 h1,h2,h3,h4,h5,h6{
-  font-family: $alt-font-family;
+  font-family: $header-font;
   font-weight: 300;
   text-transform: uppercase;
   margin: 0;
