Updated '/_sass/layout/projects.scss' via CloudCannon

--- a/_sass/layout/projects.scss
+++ b/_sass/layout/projects.scss
@@ -35,7 +35,7 @@
   border: solid .2em $color-white;
   margin: 0 auto;
   max-width: 70%;
-  padding: 2em 0 3em;
+  padding: 2em 2em 3em;
   text-align: center;
 }
 h3.project-item-title{
