Updated '/_sass/_layout.scss' via CloudCannon

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -21,6 +21,7 @@ padding: 0; float: none;
 .content-block{
   margin: 0 auto;
   padding: 2em 1%;
+  text-alighn: center;
 }
 
 .content-block:first-of-type{
