--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -56,9 +56,8 @@ h2.content-block-title{
 
 .content-image{
   @include banner;
-  min-height: 40vh;
-  max-height: 40%;
-  padding-top: 2em;
+  height: 40vh;
+  padding: 5em 0;
 }
 .content-image p{
   color: $color-white;
