--- a/_sass/layout/grid.scss
+++ b/_sass/layout/grid.scss
@@ -13,7 +13,7 @@
   float: left;
   width: 100%;
   padding: 0% 0;
-  min-height: 300px;
+  height: 40vh;
 }
 .half-column p{
   font-family: $base-font-family;
@@ -31,13 +31,13 @@
     display: table;
     font-size: 1rem;
     width: 50%;
-    min-height: 600px;
+    height: 40vh;
   }
   .half-column:first-of-type{
     display: table;
     font-size: 1rem;
     width: 50%;
-    min-height: 600px;
+    height: 40vh;
     border-right: solid 2px $grey-color-light;
     margin-right: -2px;
   }
@@ -50,9 +50,7 @@
 }
 .column-image{
   @include banner;
-  min-height: 300px;
-  max-height: 300px;
-  height: 300px;
+  min-height: 40vh;
   width: 100%;
   float: right;
 }
